--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "aws/aws-sdk-php": "^3.351",
         "cviebrock/eloquent-sluggable": "^12.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "laravel/ui": "^4.6",
+        "resend/resend-php": "^0.18.1",
+        "symfony/http-client": "^7.3",
+        "symfony/mailgun-mailer": "^7.3",
+        "symfony/postmark-mailer": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
